fix: Get rid of pink border at top/bottom on Safari

--- a/src/App.css
+++ b/src/App.css
@@ -83,6 +83,7 @@ body, .app {
   font-size: 1.25em;
   border: none;
   outline: none;
+  margin: 0;
 }
 
 .close-search {
